# iterated_circle_inversions

./: CMakeLists.txt  README.md
sample-input/: clock.json  golden_triangle.json  heptagon.json  pentagon.json  square.json
src/: circle_set.cpp  circle_set.h  circle_tree.cpp  circle_tree.h  geometry.cpp  geometry.h  image.cpp  image.h  input.cpp  input.h  iter_circ_inv.cpp  iter_circ_inv.h  iterated_inversion.cpp  iterated_inversion.h  main.cpp  rasterize.cpp  rasterize.h  sample input.txt  util.cpp  util.h
